...
          id: rate.toString(),
          title: translate("player.playbackSpeed.rate", { rate }),
          state: playbackRate === rate ? "on" : "off",
        }))}
      >
        <View
          testID="speed-control"
          accessible={true}
          accessibilityRole="button"
          accessibilityLabel={translate("accessibility.playbackSpeed")}
          accessibilityValue={{
            text: translate("player.playbackSpeed.rate", { rate: playbackRate }),
          }}
...
