...
              title="Options"
              onPressAction={({ nativeEvent }) => {
                handleMenuAction(nativeEvent.event);
              }}
              actions={menuActions}
            >
              <View testID="download-button" style={{ paddingHorizontal: 16, paddingVertical: 4 }}>
                <Ionicons name="ellipsis-horizontal" size={24} color={colors.textPrimary} />
              </View>
            </MenuView>
          ),
        }}
      />
...
